aws New files added - [aws,aws] Files modified - [Login,Main,Registration,securityService,webapp,development.properties]

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,21 +21,24 @@
     <link rel="stylesheet" href="themes/mobile/android/style.css" theme="wmtheme">
     <!-- /theme -->
     <link rel="stylesheet" href="app.css">
-    <script src="amazon-cognito-identity.min.js"></script>
-    <script src="aws-cognito-sdk.min.js"></script>
-    <script src="aws-sdk.js"></script>
+
     <!--<script src="aws-sdk.min.js"></script>-->
-    <script src="base64.js"></script>
-    <script src="ec.js"></script>
-    <script src="jsbn.js"></script>
-    <script src="jsbn2.js"></script>
-    <script src="prng4.js"></script>
-    <script src="rng.js"></script>
-    <script src="rsa.js"></script>
-    <script src="rsa2.js"></script>
-    <script src="sec.js"></script>
-    <script src="sha1.js"></script>
-    <script src="sjcl.js"></script>
+    <script src="resources/aws/aws-sdk.js"></script>
+    <script src="resources/aws/aws-cognito-sdk.min.js"></script>
+    <script src="resources/aws/amazon-cognito-identity.min.js"></script>
+    <script src="resources/aws/base64.js"></script>
+    <script src="resources/aws/ec.js"></script>
+    <script src="resources/aws/jsbn.js"></script>
+    <script src="resources/aws/jsbn2.js"></script>
+    <script src="resources/aws/prng4.js"></script>
+    <script src="resources/aws/rng.js"></script>
+    <script src="resources/aws/rsa.js"></script>
+    <script src="resources/aws/rsa2.js"></script>
+    <script src="resources/aws/sec.js"></script>
+    <script src="resources/aws/sha1.js"></script>
+    <script src="resources/aws/sjcl.js"></script>
+
+    <!--type="application/json"-->
 
 </head>
 
