--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -16,6 +16,9 @@
                     <wm-checkbox caption="Remember Me" name="remembermecheck"></wm-checkbox>
                 </wm-composite>
             </wm-login>
+            <wm-container name="container1" horizontalalign="center">
+                <wm-anchor margin="unset 0.5em" name="anchor1" caption="New Here? Sign Up" on-tap="Actions.goToPage_Registration.invoke()"></wm-anchor>
+            </wm-container>
         </wm-page-content>
     </wm-content>
 </wm-page>
