--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -1,7 +1,7 @@
 <wm-page data-ng-controller="MainPageController" name="mainpage">
     <wm-left-panel content="leftnav" name="left_panel1"></wm-left-panel>
     <wm-mobile-navbar name="mobile_navbar1" title="Title" leftnavpaneliconclass="wi wi-menu" backbutton="false">
-        <wm-anchor caption="" name="AddLink" iconclass="wi wi-gear"></wm-anchor>
+        <wm-anchor caption="" name="AddLink" iconclass="wi wi-gear" on-tap="Actions.logoutAction.invoke()"></wm-anchor>
     </wm-mobile-navbar>
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
