New files added - [PgPatientRegForm,OrthoSA.jpg] Files modified - [Main,.wmproject.properties,app.variables.json,pages-config.json] New files added - [PgPatientRegForm,OrthoSA.jpg] Files modified - [Main,.wmproject.properties,app.variables.json,pages-config.json]

--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -16,6 +16,7 @@
                     </wm-container>
                 </wm-listtemplate>
             </wm-list>
+            <wm-button class="btn-default" caption="Button" type="button" margin="unset 0.5em" name="button1" on-tap="Actions.goToPage_PgPatientRegForm.invoke()"></wm-button>
         </wm-page-content>
     </wm-content>
     <wm-mobile-tabbar dataset="home,music,edit" name="mobile_tabbar1"></wm-mobile-tabbar>
