MyAuthenticationManager New files added - [MyAuthenticationManager,GoogleOAuth] Files modified - [Login,Main,Registration,pgList,profiles,.wmproject.properties,pom.xml,project-services.xml] Removed files - [webapp]

--- a/src/main/webapp/pages/Registration/Registration.html
+++ b/src/main/webapp/pages/Registration/Registration.html
@@ -29,6 +29,7 @@
                     <wm-button caption="Sign up" width="100%" class="btn-primary btn-lg" name="button6" margin=".5em unset" on-tap="button6Tap($event, $scope)"></wm-button>
                 </wm-buttongroup>
             </wm-form>
+            <wm-button class="btn-lg btn-primary" caption="Back to Login" type="button" margin="unset 0.5em" name="button2" width="100%" on-tap="Actions.goToPage_Login.invoke()"></wm-button>
         </wm-page-content>
     </wm-content>
 </wm-page>
