--- a/src/main/webapp/pages/pgList/pgList.html
+++ b/src/main/webapp/pages/pgList/pgList.html
@@ -46,6 +46,7 @@
                 <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                 <wm-form-action key="new" display-name="New" show="true" class="form-new btn-success" iconclass="wi wi-plus" title="New" action="new()" accessroles="admin,user" shortcutkey="+" disabled="false" type="button" update-mode="false"></wm-form-action>
             </wm-liveform>
+            <wm-button class="btn-default" caption="Add" type="button" margin="unset 0.5em" name="btnAdd" iconclass="wi wi-add fa-2x" on-tap="btnAddTap($event, $scope)"></wm-button>
         </wm-page-content>
     </wm-content>
 </wm-page>
