--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -5,7 +5,9 @@
     </wm-mobile-navbar>
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
-            <wm-list listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-1 lg-1" class="media-list" datafield="All Fields" name="executeQryDoctorsListList1" dataset="bind:Variables.svDoctorsList.dataSet" navigation="Scroll">
+            <wm-button class="btn-default" caption="To Do" type="button" margin="unset 0.5em" name="btnToDo" on-tap="Actions.goToPage_pgList.invoke()"></wm-button>
+            <wm-list listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-1 lg-1" class="media-list" datafield="All Fields" name="executeQryDoctorsListList1" dataset="bind:Variables.svDoctorsList.dataSet"
+                navigation="Scroll">
                 <wm-listtemplate layout="inline" name="listtemplate1">
                     <wm-container class="media-left" name="container1">
                         <wm-picture width="32pt" height="32pt" name="Picture" shape="circle" class="media-object"></wm-picture>
