Login Files modified - [Login,pgList,CognitoUPoolLogin,securityService,project-security.xml]

--- a/src/main/webapp/pages/pgList/pgList.html
+++ b/src/main/webapp/pages/pgList/pgList.html
@@ -47,6 +47,7 @@
                 <wm-form-action key="new" display-name="New" show="true" class="form-new btn-success" iconclass="wi wi-plus" title="New" action="new()" accessroles="admin,user" shortcutkey="+" disabled="false" type="button" update-mode="false"></wm-form-action>
             </wm-liveform>
             <wm-button class="btn-default" caption="Add" type="button" margin="unset 0.5em" name="btnAdd" iconclass="wi wi-add fa-2x" on-tap="btnAddTap($event, $scope)"></wm-button>
+            <wm-button class="btn-default" caption="Back" type="button" margin="unset 0.5em" name="btnBackToHome" on-tap="Actions.goToPage_Main.invoke()"></wm-button>
         </wm-page-content>
     </wm-content>
 </wm-page>
