Files modified - [PgPatientRegForm] Files modified - [PgPatientRegForm]

--- a/src/main/webapp/pages/PgPatientRegForm/PgPatientRegForm.html
+++ b/src/main/webapp/pages/PgPatientRegForm/PgPatientRegForm.html
@@ -481,6 +481,53 @@
                                                 <wm-label padding="unset 0.5em" name="label50" caption="Medicare does not completely cover the cost of your consultation. The consultation fees charged by Doctor are as follows;"></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
+                                        <wm-gridrow name="gridrow65">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn118">
+                                                <wm-label padding="unset 0.5em" name="label51" caption="Initial Consultation:" fontweight="bold"></wm-label>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn123">
+                                                <wm-label padding="unset 0.5em" name="label57" caption="$150.00"></wm-label>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow66">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn119">
+                                                <wm-label padding="unset 0.5em" caption="Medicare Rebate:" fontweight="bold" name="label56"></wm-label>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn124">
+                                                <wm-label padding="unset 0.5em" name="label59" caption="$72.75"></wm-label>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow67">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn120">
+                                                <wm-label padding="unset 0.5em" name="label52" caption="Follow Up Consultation:" fontweight="bold"></wm-label>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn125_1">
+                                                <wm-label padding="unset 0.5em" name="label60" caption="$90.00"></wm-label>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow68">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn121">
+                                                <wm-label padding="unset 0.5em" name="label53" caption="Medicare Rebate:" fontweight="bold"></wm-label>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn126">
+                                                <wm-label padding="unset 0.5em" name="label61" caption="$36.55"></wm-label>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow69">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn122">
+                                                <wm-label padding="unset 0.5em" name="label55" caption="Injections:" fontweight="bold"></wm-label>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn127">
+                                                <wm-label padding="unset 0.5em" name="label62" caption="$45.00 (No Medicare Rebate)"></wm-label>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow70">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn128">
+                                                <wm-html name="html2" class="text-justify">
+                                                    <p><b>I understand that payment in full of the account is my responsibility and a gap will be charged above the Medicare Rebate. Failure to pay accounts will result in legal action / debt collection which incurs an additional charge by myself. In engaging Dr Cabot, I acknowledge that my contractual relations are with the Medical Practitioner and not Orthopaedics SA Pty Ltd and i further acknowledge that Orthopaedics SA is not the provider of the medical services </b></p>
+                                                </wm-html>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-container>
                             </wm-container>
