--- a/src/main/webapp/pages/PgPatientRegForm/PgPatientRegForm.html
+++ b/src/main/webapp/pages/PgPatientRegForm/PgPatientRegForm.html
@@ -3,50 +3,62 @@
         <wm-page-content columnwidth="12" name="page_content1">
             <wm-form errormessage="" captionposition="top" title="" enctype="application/x-www-form-urlencoded" method="post" dataset="bind:Variables.MwpportalCreatePtdetail.dataSet" captionalign="left" name="pgPatientPortal" margin="unset unset 15px unset">
                 <wm-layoutgrid name="layoutgridPatient" columns="1" class="page-background">
+                    <wm-gridrow name="gridrow71">
+                        <wm-gridcolumn columnwidth="12" name="gridcolumn129" horizontalalign="center">
+                            <wm-container width="100%" height="100%" color="#ffffff" backgroundcolor="#ffffff" padding="1em unset 1.5em unset" name="container6">
+                                <wm-picture picturesource="resources/images/imagelists/OrthoSA.jpg" height="100%" width="25%" showindevice="lg" name="picture4_1"></wm-picture>
+                            </wm-container>
+                        </wm-gridcolumn>
+                    </wm-gridrow>
                     <wm-gridrow name="gridrow128_1">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn130_1" horizontalalign="center" padding="1em 7em 1em 1em">
-                            <wm-picture name="picture4" picturesource="resources/images/imagelists/OrthoSA.jpg" height="100%" width="130%"></wm-picture>
+                        <wm-gridcolumn columnwidth="12" name="gridcolumn130_1" horizontalalign="center">
+                            <wm-container name="container5_1" width="100%" height="100%" color="#ffffff" backgroundcolor="#ffffff" padding="1em unset 1.5em unset">
+                                <wm-picture name="picture4" picturesource="resources/images/imagelists/OrthoSA.jpg" height="100%" width="90%" showindevice="xs,sm,md"></wm-picture>
+                            </wm-container>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow129_1">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn131">
                             <wm-gridcolumn columnwidth="12" name="gridcolumn439_3">
-                                <wm-label padding="0.7em 0.5em 0.7em 1.5em" caption="Personal Details" class="h2 formLabel" name="lblPersonalDetails" color="#ffffff" fontsize="18" textalign="center" fontweight="bold" backgroundcolor="#00a79b"></wm-label>
+                                <wm-container name="container4">
+                                    <wm-label padding="0.7em 0.5em 0.7em 1.5em" caption="Personal Details" class="h2 formLabel" name="lblPersonalDetails" color="#ffffff" fontsize="18" textalign="center" fontweight="bold" backgroundcolor="#00a79b"></wm-label>
+                                </wm-container>
                             </wm-gridcolumn>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow121_1">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn125">
                             <wm-layoutgrid name="layoutgrid45">
-                                <wm-gridrow name="gridrow158_1">
-                                    <wm-gridcolumn columnwidth="12" name="gridcolumn447_2">
-                                        <wm-label padding="unset 0.5em unset unset" caption="Title:" required="true" margin="unset unset unset 1px" name="lblTitle" fontsize="11"></wm-label>
-                                        <wm-form-field widget="select" show="true" type="custom" name="sltTitle" dataset="Mr,Mrs,Miss,Master,Dr,Professor,Father,Brother,Sister,Mother" required="true"></wm-form-field>
+                                <wm-gridrow name="gridrow72">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn130">
+                                        <wm-container name="container7" padding="unset 2em unset 1em">
+                                            <wm-label padding="unset 0.5em unset unset" caption="Title:" required="true" margin="unset unset unset 1px" name="lblTitle" fontsize="1.5" fontunit="em"></wm-label>
+                                            <wm-form-field widget="select" show="true" type="custom" name="sltTitle" dataset="Mr,Mrs,Miss,Master,Dr,Professor,Father,Brother,Sister,Mother" required="true" fontunit="em" fontsize="1.5"></wm-form-field>
+                                            <wm-label padding="unset 0.5em unset unset" name="lblFirstName" caption="Given Name" required="true" margin="unset unset unset 1px" fontsize="1.5" fontunit="em"></wm-label>
+                                            <wm-form-field widget="text" show="true" type="custom" name="txtFirstName5" required="true" fontunit="em" fontsize="1.5"></wm-form-field>
+                                            <wm-label padding="unset 0.5em unset unset" name="lblSurname" caption="Surname" required="true" margin="unset unset unset 1px" fontsize="1.5" fontunit="em"></wm-label>
+                                            <wm-form-field widget="text" show="true" type="custom" name="txtSurname5" required="true" fontsize="1.5" fontunit="em"></wm-form-field>
+                                            <wm-label name="lblMiddleName" required="false" caption="Middle Name" margin="unset unset unset 1px" fontsize="1.5" fontunit="em"></wm-label>
+                                            <wm-form-field widget="text" show="true" type="custom" name="txtMiddleName" fontunit="em" fontsize="1.5"></wm-form-field>
+                                            <wm-label name="lblPreferredName" caption="Preferred Name" margin="unset unset unset 1px" fontsize="1.5" fontunit="em"></wm-label>
+                                            <wm-form-field widget="text" show="true" type="custom" name="txtPreferredName" fontsize="1.5" fontunit="em"></wm-form-field>
+                                        </wm-container>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
-                                <wm-gridrow name="gridrow120">
-                                    <wm-gridcolumn columnwidth="12" name="gridcolumn217">
-                                        <wm-label padding="unset 0.5em unset unset" name="lblFirstName" caption="Given Name" required="true" margin="unset unset unset 1px" fontsize="11"></wm-label>
-                                        <wm-form-field widget="text" show="true" type="custom" name="txtFirstName5" required="true"></wm-form-field>
-                                    </wm-gridcolumn>
+                                <wm-gridrow name="gridrow158_1" padding="unset 2em unset 1em">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn447_2"></wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow120" padding="unset 2em unset 1em">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn217"></wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow121">
-                                    <wm-gridcolumn columnwidth="12" name="gridcolumn219">
-                                        <wm-label padding="unset 0.5em unset unset" name="lblSurname" caption="Surname" required="true" margin="unset unset unset 1px" fontsize="11"></wm-label>
-                                        <wm-form-field widget="text" show="true" type="custom" name="txtSurname5" required="true"></wm-form-field>
-                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn219"></wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow144_3">
-                                    <wm-gridcolumn columnwidth="12" name="gridcolumn420_5">
-                                        <wm-label name="lblMiddleName" required="false" caption="Middle Name" margin="unset unset unset 1px" fontsize="11"></wm-label>
-                                        <wm-form-field widget="text" show="true" type="custom" name="txtMiddleName"></wm-form-field>
-                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn420_5"></wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow145_5">
-                                    <wm-gridcolumn columnwidth="12" name="gridcolumn422_3">
-                                        <wm-label name="lblPreferredName" caption="Preferred Name" margin="unset unset unset 1px" fontsize="11"></wm-label>
-                                        <wm-form-field widget="text" show="true" type="custom" name="txtPreferredName"></wm-form-field>
-                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn422_3"></wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                             <wm-layoutgrid name="layoutgrid2">
