saveSignatureAsImage New files added - [saveSignatureAsImage,signaturepad,signaturepad] Files modified - [PgPatientRegForm,pom.xml,project-services.xml,index.html]

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,6 +40,10 @@
 
     <!--type="application/json"-->
 
+    <!--Signaturepad v3-->
+    <link href="resources/signaturepad/signature-pad.css" rel="stylesheet">
+    <script src="resources/signaturepad/signature_pad.umd.js"></script>
+
 </head>
 
 <body class="wm-app" data-ng-app="Application" id="ng-app" data-ng-controller="AppController">
