FileService New files added - [FileService] Files modified - [PgPatientRegForm,webapp,pom.xml,project-services.xml]

--- a/src/main/webapp/pages/PgPatientRegForm/PgPatientRegForm.html
+++ b/src/main/webapp/pages/PgPatientRegForm/PgPatientRegForm.html
@@ -546,6 +546,11 @@
                                         </wm-container>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
+                                <wm-gridrow name="gridrow69_1">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn124_1">
+                                        <wm-fileupload name="fileupload1" contenttype="files" service="FileService" operation="uploadFile"></wm-fileupload>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
                                 <wm-gridrow name="gridrow155">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn461_5" horizontalalign="center" padding="1em unset unset unset">
                                         <wm-button class="btn-default no-border" caption="Submit" type="submit" margin="unset 0.5em" name="btnSubmit" textalign="center" show="bind:Widgets.pgPatientPortal.formWidgets.chkAgreetheTermsAbove.datavalue" animation="fadeIn"
