PgPatientRegForm Files modified - [PgPatientRegForm]

--- a/src/main/webapp/pages/PgPatientRegForm/PgPatientRegForm.html
+++ b/src/main/webapp/pages/PgPatientRegForm/PgPatientRegForm.html
@@ -327,7 +327,7 @@
                                 <wm-gridrow name="gridrow155">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn461_5" horizontalalign="center" padding="1em unset unset unset">
                                         <wm-button class="btn-default no-border" caption="Submit" type="submit" margin="unset 0.5em" name="btnSubmit" textalign="center" show="bind:Widgets.pgPatientPortal.formWidgets.chkAgreetheTermsAbove.datavalue" animation="fadeIn"
-                                            backgroundcolor="#00a79b" bordercolor="#000000" color="#fff" on-click="Variables.svCreateCSV.invoke()" on-tap="btnSubmitTap($event, $scope)"></wm-button>
+                                            backgroundcolor="#00a79b" bordercolor="#000000" color="#fff" on-click="Variables.svCreateCSV.invoke()" on-tap="Variables.svSaveSignatureAsImage.invoke()"></wm-button>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow118_1">
